# sanara

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  VERSION_LOCK  action.yml  entrypoint.sh  pyproject.toml
.github/: labels.yml  pull_request_template.md  release.yml
.sanara/: harness.yml  policy.yml
docs/: configuration-reference.md  configuration.md  debugging.md  github-action-setup.md  terraform-validation.md  upgrading.md
sanara/: __init__.py  cli.py
schemas/: sanara.advisor.findings.v0.1.json  sanara.agent_trace.v0.1.json  sanara.finding.v0.1.json  sanara.patch_contract.v0.1.json  sanara.policy_config.v0.1.json  sanara.policy_evaluation.v0.1.json  sanara.run_summary.v0.1.json  sanara.run_summary.v0.2.json  sanara.targeted_results.v0.1.json
scripts/: assert_simulation_golden.py  bump_release_versions.py  check_repo_knowledge.py  check_version_consistency.sh  dry_run_local.sh
templates/: harness.yml  policy.yml
tests/: test_agentic_hybrid.py  test_agentic_provider.py  test_artifact_determinism.py  test_cli_policy_explain.py  test_cli_policy_lint.py  test_cli_validate_policy.py  test_command_utils.py  test_context.py  test_decision_reason_contract.py  test_dedup_key.py  test_drc_engine.py  test_drc_s3_guards.py  test_drc_transforms.py  test_driver_publish_retry.py  test_driver_tf_delta.py  test_finding_policy.py  test_github_client_http.py  test_harness.py  test_normalize.py  test_orchestrator_advisor.py  test_orchestrator_artifact_contracts.py  (+12 more)
(+104 files in other folders)
